--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,3 +10,39 @@ cursor            #993333
 cursor_text_color #111111
 cursor_shape      beam
 cursor_blink      yes
+
+# black
+color0 #242424
+color8 #666666
+
+# red
+color1 #FF9900
+color9 #000000
+
+# green
+color2  #FFCC00
+color10 #000000
+
+# yellow
+color3  #FF6600
+color11 #000000
+
+# blue
+color4  #666666
+color12 #000000
+
+# magenta
+color5  #00FF00
+color13 #00FF00
+
+# cyan
+color6  #0095a8
+color14 #000000
+
+# white
+color7  #00FF00
+color15 #00FF00
+
+
+# 006600, 009900, 00CC00, 00FF00
+# 00616f, 0095a8
